--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,199 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  font-size: 62.5%;   
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(34, 41, 174);
+  color: white;
+  cursor: pointer;
+  padding: 1rem 12rem;
+}
+
+.logo a {
+  font-size: 2rem;
+  color: white;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+ul li {
+  margin: 0rem 1.6rem;
+}
+
+ul li:last-child {
+  margin: 0rem;
+}
+
+
+ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.6rem;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 23.6%);
+  gap: 2rem;
+  place-content: center;
+  padding: 0rem 12rem;
+  margin-top: 1.6rem;
+
+}
+
+.box {
+  box-shadow: rgba(0, 0, 0, 0.24) 0 0.3rem 0.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+  border-radius: 2rem;
+
+}
+
+
+
+.box .img {
+  background-color: #d95959e3;
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.box img {
+  width: 100%;
+  height: 20rem;
+  border-radius: 2rem 2rem 0rem 0rem;
+}
+
+.box p {
+  font-size: 0.8rem;
+  color: #5f5757ad;
+  padding: 0rem 1.6rem;
+  margin: 0.8rem 0rem;
+  font-size: 1.4rem;
+}
+
+.box .price {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: black;
+  text-transform: uppercase;
+}
+
+.addbuton {
+  background-color: black;
+  color: white;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  border: none;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  margin-left: 1.6rem;
+  font-weight: 700;
+}
+
+.cartbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  background-color: rgb(102 95 95 / 10%);
+  margin: 2rem auto;
+  padding: 1rem 2rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.cartbox img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+
+}
+
+.cartbox .addbuton {
+
+  margin: 0;
+
+}
+
+.empty {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.subtotal {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+}
+
+.categories ul {
+  display: grid;
+  grid-template-columns: repeat(4, 23.6%);
+  gap: 2rem;
+  place-content: center;
+  padding: 0rem 12rem;
+  margin-top: 1.6rem;
+}
+
+.categories ul li {
+  font-size: 2rem;
+  text-transform: uppercase;
+  border: 0.1rem solid rgb(3, 3, 3);
+  height: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+}
+
+.heading_cat::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-color: rgb(51, 134, 189);
+  width: 10%;
+  height: 0.1rem;
+}
+
+.heading_cat {
+  margin: 3rem 0rem 5rem 13rem;
+  text-transform: uppercase;
+  position: relative;
+  font-size: 1.5rem;
+  display: block;
+}
+
+.input {
+  width: 2rem;
+  text-align: center;
 }
