--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ nav {
 ul {
   list-style: none;
   display: flex;
+  align-items: center;
 }
 
 ul li {
@@ -54,7 +55,9 @@ ul li a {
   color: white;
   font-size: 1.6rem;
 }
-
+ul li span{
+  font-size: 2.5rem;  
+}
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 23.6%);
@@ -159,27 +162,52 @@ ul li a {
   width: 80%;
   margin: auto;
 }
-
+.categories 
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+ 
+}
 .categories ul {
-  display: grid;
-  grid-template-columns: repeat(4, 23.6%);
-  gap: 2rem;
-  place-content: center;
-  padding: 0rem 12rem;
-  margin-top: 1.6rem;
+  width: 100%;
+  display: block;
+  padding: 0;
+  margin: 0;
+
 }
 
 .categories ul li {
   font-size: 2rem;
   text-transform: uppercase;
-  border: 0.1rem solid rgb(3, 3, 3);
-  height: 20rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  border-bottom: 0.1rem solid rgb(3, 3, 3);
   cursor: pointer;
+  margin: 0;
+  padding: 0 0 0 2rem;
 
 }
+.opac-layer{
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.content {
+  width: 300px;
+  height: 100%;
+  background-color: white;
+  position: relative;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  padding-top: 3rem;
+}
+
 
 .heading_cat::before {
   content: "";
@@ -202,4 +230,23 @@ ul li a {
 .input {
   width: 2rem;
   text-align: center;
+}
+
+@media(max-width:1080px){
+  .grid{
+    grid-template-columns: repeat(3, 33.3%);
+    padding: 0rem 4rem;
+  }
+}
+
+@media(max-width:767px){
+  .grid{
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+
+@media(max-width:567px){
+  .grid{
+    grid-template-columns: repeat(1, 100%);
+  }
 }
